Added Nextbit + Dialexa Clients

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -13,8 +13,8 @@
             <div class="col-lg-4 col-sm-6 portfolio-popin">
                 <a href="https://www.dropoff.com/" target="_blank">
                     <div class="logo">
-                        <img src="{{page.leadingpath}}img/external/portfolio/dropoff_blank.png" class="blank img-responsive" alt="">
-                        <img src="{{page.leadingpath}}img/external/portfolio/dropoff_normal.png" class="normal img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/dropoff_blank.png" class="blank img-responsive" alt="Dropoff">
+                        <img src="{{page.leadingpath}}img/external/portfolio/dropoff_normal.png" class="normal img-responsive" alt="Dropoff">
                     </div>
                     
                     <!-- <div class="caption">
@@ -27,8 +27,8 @@
             <div class="col-lg-4 col-sm-6 portfolio-popin">
                 <a href="https://www.silvercar.com/" target="_blank">
                     <div class="logo">
-                        <img src="{{page.leadingpath}}img/external/portfolio/silvercar_blank.png" class="blank img-responsive" alt="">
-                        <img src="{{page.leadingpath}}img/external/portfolio/silvercar_normal.png" class="normal img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/silvercar_blank.png" class="blank img-responsive" alt="Silvercar">
+                        <img src="{{page.leadingpath}}img/external/portfolio/silvercar_normal.png" class="normal img-responsive" alt="Silvercar">
                     </div>
                     
                     <!-- <div class="caption">
@@ -41,8 +41,8 @@
             <div class="col-lg-4 col-sm-6 portfolio-popin">
                 <a href="https://www.adidas.com/us/" target="_blank">
                     <div class="logo">
-                        <img src="{{page.leadingpath}}img/external/portfolio/adidas_blank.png" class="blank img-responsive" alt="">
-                        <img src="{{page.leadingpath}}img/external/portfolio/adidas_normal.png" class="normal img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/adidas_blank.png" class="blank img-responsive" alt="adidas">
+                        <img src="{{page.leadingpath}}img/external/portfolio/adidas_normal.png" class="normal img-responsive" alt="adidas">
                     </div>
                     
                     <!-- <div class="caption">
@@ -55,8 +55,8 @@
             <div class="col-lg-4 col-sm-6 portfolio-popin">
                 <a href="https://www.docbookmd.com/" target="_blank">
                     <div class="logo">
-                        <img src="{{page.leadingpath}}img/external/portfolio/docbookmd_blank.png" class="blank img-responsive" alt="">
-                        <img src="{{page.leadingpath}}img/external/portfolio/docbookmd_normal.png" class="normal img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/docbookmd_blank.png" class="blank img-responsive" alt="DocbookMD">
+                        <img src="{{page.leadingpath}}img/external/portfolio/docbookmd_normal.png" class="normal img-responsive" alt="DocbookMD">
                     </div>
                     
                     <!-- <div class="caption">
@@ -69,8 +69,8 @@
             <div class="col-lg-4 col-sm-6 portfolio-popin">
                 <a href="https://www.homeaway.com/" target="_blank">
                     <div class="logo">
-                        <img src="{{page.leadingpath}}img/external/portfolio/homeaway_blank.png" class="blank img-responsive" alt="">
-                        <img src="{{page.leadingpath}}img/external/portfolio/homeaway_normal.png" class="normal img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/homeaway_blank.png" class="blank img-responsive" alt="HomeAway">
+                        <img src="{{page.leadingpath}}img/external/portfolio/homeaway_normal.png" class="normal img-responsive" alt="HomeAway">
                     </div>
                     
                     <!-- <div class="caption">
@@ -83,8 +83,8 @@
             <div class="col-lg-4 col-sm-6 portfolio-popin">
                 <a href="https://www.honestdollar.com/" target="_blank">
                     <div class="logo">
-                        <img src="{{page.leadingpath}}img/external/portfolio/honestdollar_blank.png" class="blank img-responsive" alt="">
-                        <img src="{{page.leadingpath}}img/external/portfolio/honestdollar_normal.png" class="normal img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/honestdollar_blank.png" class="blank img-responsive" alt="Honest Dollar">
+                        <img src="{{page.leadingpath}}img/external/portfolio/honestdollar_normal.png" class="normal img-responsive" alt="Honest Dollar">
                     </div>
                     
                     <!-- <div class="caption">
@@ -94,6 +94,22 @@
                     </div> -->
                 </a>
             </div>
+        </div>
+        <div class="col-lg-4 col-lg-offset-2 col-sm-6 portfolio-popin">
+            <a href="https://www.nextbit.com/" target="_blank">
+                <div class="logo">
+                    <img src="{{page.leadingpath}}img/external/portfolio/nextbit_blank.png" class="blank img-responsive" alt="nextbit">
+                    <img src="{{page.leadingpath}}img/external/portfolio/nextbit_normal.png" class="normal img-responsive" alt="nextbit">
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-popin">
+            <a href="https://www.dialexa.com/" target="_blank">
+                <div class="logo">
+                    <img src="{{page.leadingpath}}img/external/portfolio/dialexa_blank.png" class="blank img-responsive" alt="Dialexa">
+                    <img src="{{page.leadingpath}}img/external/portfolio/dialexa_normal.png" class="normal img-responsive" alt="Dialexa">
+                </div>
+            </a>
         </div>
     </div>
 </section>
