Updated Meta Description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="LeanMeanTech is building apps for the mobile world, the world preparing for the Internet of Things (IoT), the sharing economy, the world of wearable tech, the world at the core of modern business.">
     <meta name="author" content="">
 
     <title>{% if page.title %}{{page.title}} - {% endif %}LeanMeanTech</title>
