--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -688,14 +688,12 @@ section.section-testimony {
     
     .logo {
         position: relative;
-        width: 300px;
-        height: 150px;
         margin: 0px auto 0px auto;
+
+        height: 95px;
+        width: 150px;
         
-        // height: 75px;
-        // width: 150px;
-        
-        @media only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 768px) {
+        @media only screen and (max-width: 768px) {
             height: 75px;
             width: 150px;
         }
@@ -729,7 +727,7 @@ section.section-testimony {
     
     img {
         position: absolute;
-        top: 0px;
+        top: 10px;
         left: 0px;
         
         &.blank {
@@ -738,6 +736,10 @@ section.section-testimony {
         
         &.normal {
             opacity: 0;
+        }
+        
+        @media only screen and (max-width: 768px) {
+            top: 0px;
         }
     }
     
